--- a/workflow-templates/php-security.yml
+++ b/workflow-templates/php-security.yml
@@ -2,16 +2,14 @@ name: Security analysis
 
 on:
   push:
-    branches: [ main ]
+    branches: [ $default-branch ]
   pull_request:
-    branches: [ main ]
+    branches: [ $default-branch ]
   schedule:
     - cron: '0 0 * * 1'
 
 jobs:
   security:
     uses: dvsa/.github/.github/workflows/php-security.yml@v3.2.0
-    with: 
-     php_versions: "[\"7.4\"]"
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
