--- a/workflow-templates/php-tests.yml
+++ b/workflow-templates/php-tests.yml
@@ -2,9 +2,9 @@ name: PHP Unit Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ $default-branch ]
   pull_request:
-    branches: [ main ]
+    branches: [ $default-branch ]
   schedule:
     - cron: '0 0 * * 1'
  
@@ -12,4 +12,4 @@ jobs:
   static:
     uses: dvsa/.github/.github/workflows/php-tests.yml@v3.2.0
     with: 
-     php_versions: "[\"7.4\",\"8.0\"]"
+     php-versions: "[\"7.4\",\"8.0\"]"
