--- a/.github/workflows/update-lambda-function.yaml
+++ b/.github/workflows/update-lambda-function.yaml
@@ -28,7 +28,7 @@ jobs:
       id-token: write
     steps:
       - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@05b148adc31e091bafbaf404f745055d4d3bc9d2
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
           role-session-name: GithubActionsSession
