--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -66,3 +66,6 @@ jobs:
         run: |
           npm install -g @ionic/cli qrcode-terminal @capacitor/core @capacitor/cli
           set +x; . ./.env; set -x; npm install --legacy-peer-deps
+      
+      - name: "⚙️ Check Environment"
+        run: env
