--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -61,10 +61,12 @@ jobs:
           role-session-name: GHAMobileBuild
 
       - name: "📂 Set Configuration Files"
+        shell: bash
         run: |
           echo ${{ secrets.NPMRC }} | base64 --decode > .npmrc
           echo ${{ secrets.DOTENV }} | base64 --decode > .env
           aws s3 cp ${{ secrets.VERSION_BUCKET }}/github-actions/latest-develop.txt latest-version.txt
+          echo "v0.1827.0" > latest-version.txt
           echo "CURRENT_VERSION=$(cat latest-version.txt)" >> $GITHUB_ENV
           echo "BUILD_VERSION=${{ github.run_id }}" >> $GITHUB_ENV
           version=$(bash .github/scripts/bump.sh ${{ env.CURRENT_VERSION }} 1)
