--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -66,7 +66,7 @@ jobs:
           echo ${{ secrets.NPMRC }} | base64 --decode > .npmrc
           echo ${{ secrets.DOTENV }} | base64 --decode > .env
           aws s3 cp ${{ secrets.VERSION_BUCKET }}/github-actions/latest-develop.txt latest-version.txt
-          echo "v0.1827.0" > latest-version.txt
+          echo "0.1827.0" > latest-version.txt
           echo "CURRENT_VERSION=$(cat latest-version.txt)" >> $GITHUB_ENV
           current_vers=$(cat latest-version.txt)
           echo "BUILD_VERSION=${{ github.run_id }}" >> $GITHUB_ENV
