--- a/.github/workflows/php-library-tests.yml
+++ b/.github/workflows/php-library-tests.yml
@@ -10,6 +10,10 @@ on:
         required: false
         default: true
         type: boolean
+      phpunit-args:
+        required: false
+        default: --verbose
+        type: string
 
 jobs:
   tests:
@@ -37,4 +41,4 @@ jobs:
         run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit ${{ phpunit-args }}
