--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -10,9 +10,8 @@ on:
         required: false
         default: true
         type: boolean
-      phpunit-args:
+      phpunit-config:
         required: false
-        default: '--verbose'
         type: string
 
 jobs:
@@ -25,6 +24,9 @@ jobs:
         php: ${{ fromJSON(inputs.php-versions) }}
         
     name: PHP test ${{ matrix.php }} 
+
+    env:
+      PHPUNIT_CONFIG: ${{ inputs.phpunit-config && format('-c "{0}"', inputs.phpunit-config) || '' }}
 
     steps:
       - name: Checkout code
@@ -41,4 +43,4 @@ jobs:
         run: composer install --optimize-autoloader --no-progress
 
       - name: Execute tests
-        run: vendor/bin/phpunit ${{ inputs.phpunit-args }}
+        run: vendor/bin/phpunit $PHPUNIT_CONFIG
