--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -1,7 +1,20 @@
 name: Static analysis
 
 on:
- workflow_call:
+  workflow_call:
+    inputs:
+      phpstan-composer-install:
+        required: false
+        default: false
+        type: boolean
+      phpcs-composer-install:
+        required: false
+        default: false
+        type: boolean
+      psalm-composer-install:
+        required: false
+        default: true
+        type: boolean
 
 jobs:
   phpstan:
@@ -19,6 +32,10 @@ jobs:
           php-version: '8.1'
           coverage: none
           tools: phpstan
+
+      - name: Setup composer
+        if: ${{ phpstan-composer-install }}
+        run: composer install --no-progress
 
       - name: Execute PHPStan
         run: phpstan analyze --no-progress
@@ -38,6 +55,11 @@ jobs:
           php-version: '8.1'
           coverage: none
           tools: php-cs-fixer, phpcs
+
+      - name: Setup composer
+        if: ${{ phpcs-composer-install }}
+        run: composer install --no-progress
+
       - name: Execute PHP CodeSniffer
         run: phpcs -q
 
@@ -59,6 +81,7 @@ jobs:
           tools: vimeo/psalm
           
       - name: Setup composer
+        if: ${{ psalm-composer-install }}
         run: composer install --no-progress
 
       - name: Execute Psalm
