--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -6,7 +6,7 @@ on:
       php-version:
         required: false
         type: string
-        default: '8.1'
+        default: 'latest'
 
 jobs:
   phpstan:
