--- a/.github/actions/display-jest-test-summary/action.yml
+++ b/.github/actions/display-jest-test-summary/action.yml
@@ -14,7 +14,7 @@ runs:
       env:
         INPUT_PATH: ${{ inputs.test_report_path }}
       run: |
-        echo JSON_OUTPUT=$(  jq '{ numTotalTests, numPassedTests, numFailedTests}' process.env.INPUT_PATH ) >> $GITHUB_OUTPUT
+        echo JSON_OUTPUT=$(  jq '{ numTotalTests, numPassedTests, numFailedTests}' $INPUT_PATH ) >> $GITHUB_OUTPUT
       shell: bash
     - name: Display Jest Test Summary
       uses: actions/github-script@v6
