--- a/.github/actions/display-jest-test-summary/action.yml
+++ b/.github/actions/display-jest-test-summary/action.yml
@@ -14,13 +14,13 @@ runs:
       env:
         INPUT_PATH: ${{ inputs.test_report_path }}
       run: |
-        echo JSON_OUTPUT=$(  jq '{ numTotalTests, numPassedTests, numFailedTests}' $INPUT_PATH ) >> $GITHUB_OUTPUT
+        echo JSON_OUTPUT=$(  jq '{ numTotalTests, numPassedTests, numFailedTests}' $INPUT_PATH ) >> $GITHUB_ENV
       shell: bash
     - name: Display Jest Test Summary
       uses: actions/github-script@v6
       with:
         script: |
-          const input = ${{ steps.transform_input.outputs.JSON_OUTPUT }};          
+          const input = ${{ env.JSON_OUTPUT }};  
           await core.summary
               .addHeading(`Results for End to End Tests`)
               .addTable([
