--- a/.github/workflows/php-library-tests.yml
+++ b/.github/workflows/php-library-tests.yml
@@ -10,6 +10,9 @@ on:
         required: false
         default: true
         type: boolean
+      phpunit-config-file:
+        required: false
+        type: string
 
 jobs:
   tests:
@@ -20,7 +23,10 @@ jobs:
       matrix:
         php: ${{ fromJSON(inputs.php-versions) }}
         stability: [prefer-lowest, prefer-stable]
-    name: PHP test ${{ matrix.php }} 
+    name: PHP test ${{ matrix.php }}
+
+    env:
+      PHPUNIT_CONFIG_FILE: ${{ inputs.phpunit-config-file && format('-c "{0}"', inputs.phpunit-config-file) || '' }}
 
     steps:
       - name: Checkout code
@@ -37,4 +43,4 @@ jobs:
         run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit $PHPUNIT_CONFIG_FILE
