--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -1,12 +1,17 @@
 name: Static analysis
 
 on:
- workflow_call:
+  workflow_call:
+    inputs:
+      php-version:
+        required: false
+        type: string
+        default: 'latest'
 
 jobs:
   phpstan:
    
-    name: PHPStan 
+    name: PHPStan - ${{ inputs.php-version }}
     runs-on: ubuntu-latest
 
     steps:
@@ -16,16 +21,19 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: ${{ inputs.php-version }}
           coverage: none
           tools: phpstan
+
+      - name: Install Composer dependancies
+        run: composer install --no-progress --no-interaction
 
       - name: Execute PHPStan
         run: phpstan analyze --no-progress
 
   php-codesniffer:
    
-    name: PHP-CodeSniffer - '8.1'
+    name: PHP-CodeSniffer - ${{ inputs.php-version }}
     runs-on: ubuntu-latest
 
     steps:
@@ -35,15 +43,19 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: ${{ inputs.php-version }}
           coverage: none
           tools: php-cs-fixer, phpcs
+
+      - name: Install Composer dependancies
+        run: composer install --no-progress --no-interaction
+
       - name: Execute PHP CodeSniffer
         run: phpcs -q
 
   psalm:
     
-    name: Psalm - '8.1'
+    name: Psalm - ${{ inputs.php-version }}
     runs-on: ubuntu-latest
 
     steps:
@@ -53,13 +65,13 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: ${{ inputs.php-version }}
           coverage: none
           extensions: mbstring, intl
           tools: vimeo/psalm
           
-      - name: Setup composer
-        run: composer install --no-progress
+      - name: Install Composer dependancies
+        run: composer install --no-progress --no-interaction
 
       - name: Execute Psalm
         run: psalm --no-progress --output-format=github --root=${GITHUB_WORKSPACE}
