--- a/.github/workflows/php-library-security.yml
+++ b/.github/workflows/php-library-security.yml
@@ -13,6 +13,9 @@ on:
         required: false
         default: true
         type: boolean
+      severity-threshold:
+        required: false
+        type: string
       
   
 jobs:
@@ -47,8 +50,9 @@ jobs:
         uses: snyk/actions/php@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SEVERITY_THRESHOLD: ${{ inputs.severity-threshold && format('--severity-threshold={0}', inputs.severity-threshold) || '' }}
         with:
-          args: --sarif-file-output=snyk.sarif
+          args: --sarif-file-output=snyk.sarif $SEVERITY_THRESHOLD
 
       - name: isPrivate
         uses: octokit/graphql-action@v2.x
