--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -5,7 +5,11 @@ on:
   secrets:
       SNYK_TOKEN:
         required: true
-  
+  inputs:
+      severity-threshold:
+        required: false
+        type: string
+        
 jobs:
  snyk:
    runs-on: ubuntu-latest
@@ -29,8 +33,9 @@ jobs:
       uses: snyk/actions/php@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        SEVERITY_THRESHOLD: ${{ inputs.severity-threshold && format('--severity-threshold={0}', inputs.severity-threshold) || '' }}
       with:
-        args: --sarif-file-output=snyk.sarif
+        args: --sarif-file-output=snyk.sarif $SEVERITY_THRESHOLD
 
     - name: isPrivate
       uses: octokit/graphql-action@v2.x
