Add `--no-transfer-progress` to `mvn` command
This suppresses a huge amount of output showing the progress of dependency downloads (15K lines on `smc-mot-service` as of the time of this commit), while still also providing useful error messages should a dependency fail to download.

--- a/.github/workflows/java-test.yaml
+++ b/.github/workflows/java-test.yaml
@@ -79,6 +79,6 @@ jobs:
       - name: Run Unit Tests with Maven
         run: |
           aws configure set region eu-west-1
-          mvn clean test
+          mvn clean test --no-transfer-progress
         working-directory: ${{inputs.working-directory}}
         
