feat(secrets): add step to configure aws credentials

--- a/.github/workflows/java-test.yaml
+++ b/.github/workflows/java-test.yaml
@@ -15,6 +15,10 @@ on:
         type: string
         default: '.'
     secrets:
+      AWS_ACCOUNT_ID:
+        required: true
+      AWS_REGION:
+        required: true
       USER_NAME:
         required: true
       ACCESS_TOKEN:
@@ -76,9 +80,18 @@ jobs:
           content: |
             ${{inputs.config_file_contents}}
 
+      - name: 🔑 Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        if: ${{ env.AWS_ACCOUNT_ID }}
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-unit-tests
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Run Unit Tests with Maven
         run: |
           aws configure set region eu-west-1
           mvn clean test --no-transfer-progress
         working-directory: ${{inputs.working-directory}}
-        
+
