--- a/.github/workflows/java-security.yaml
+++ b/.github/workflows/java-security.yaml
@@ -26,16 +26,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project Branch from GitHub
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
 
       - name: Install Java Corretto ${{inputs.java_version}}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
           java-version: '${{inputs.java_version}}'
 
       - name: Generate Maven settings.xml file to access GitHub Packages
-        uses: whelk-io/maven-settings-xml-action@v21
+        uses: whelk-io/maven-settings-xml-action@v22
         with:
           repositories: >
             [
