--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           php-version: ${{ inputs.php-version }}
           coverage: none
-          extensions: mbstring, intl
+          extensions: mbstring, intl, igbinary
           tools: vimeo/psalm
 
       - name: Install Composer dependancies
