fix: add missing ext to fix pslam CI errors (#62)
Co-authored-by: Shaun Hare <shaun.hare@dvsa.gov.uk>

--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           php-version: ${{ inputs.php-version }}
           coverage: none
-          extensions: mbstring, intl
+          extensions: mbstring, intl, igbinary
           tools: vimeo/psalm, composer:${{ inputs.composer-version }}
 
       - name: Install Composer dependancies
