chore: amend name

--- a/.github/workflows/Azure-token-rotation.yaml
+++ b/.github/workflows/Azure-token-rotation.yaml
@@ -1,4 +1,4 @@
-name: Rotate Azure Client Secret and Push to AWS
+name: Rotate Azure Client Secret and Push to AWS Secrets Manager
 
 on:
   workflow_call:
